[package]
name = "pgtools"
version = "0.1.0"
edition = "2021"
description = "PanGenome tools for reading and indexing GFA files"
license = "MIT"
repository = "https://github.com/manish59/pgtools"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
memmap2 = "0.9"
byteorder = "1.5"

[dev-dependencies]
tempfile = "3.8"
