[package]
name = "pgtools"
version = "0.2.0"
edition = "2021"
description = "Pangenome GFA/XG tooling"
license = "MIT"
authors = ["Manish Bobbili"]

[lib]
name = "pgtools"
crate-type = ["rlib"]

[[bin]]
name = "pgtools-stats-basic"
path = "src/main.rs"

# NEW: graph topology stats (Phase 2A)
[[bin]]
name = "pgtools-stats-graph"
path = "src/bin/stats_graph.rs"

# NEW: path / population stats from .xg (Phase 2B + combined)
[[bin]]
name = "pgtools-stats-paths"
path = "src/bin/stats_paths.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
hashbrown = "0.14"
