[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pgtools"
version = "0.1.0"
requires-python = ">=3.10"
description = "Streaming GFA stats (Phase 1) with Rust core"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]
